# cot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/util/: git.rs  hf.rs  mod.rs  repl.rs  unzip.rs  ver.rs  xf.rs
static/: activate  log4rs.yaml
