[package]
name = "cot"
version = "0.0.1"
edition = "2021"
authors = ["邱张华 <qiuzhanghua@icloud.com>"]
description = "Cross OS Toolkit for developers"
license = "MIT"

[dependencies]
clap = { version = "4.5.26", features = [
  "derive",
  "unicode",
  "wrap_help",
  "cargo",
] }
flate2 = "1.0.35"
log = "0.4.25"
log4rs = "1.3.0"
rust-embed = "8.5.0"
tar = "0.4.43"
tempfile = "3.15.0"
zip = "2.2.2"
