[package]
name = "cot"
version = "0.1.1"
edition = "2021"
authors = ["邱张华 <qiuzhanghua@icloud.com>"]
description = "Cross OS Toolkit for developers"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = [
  "derive",
  "unicode",
  "wrap_help",
  "cargo",
] }
dirs = "6.0.0"
flate2 = "1.0.35"
log = "0.4.25"
log4rs = "1.3.0"
regex = "1.11.1"
rust-embed = "8.5.0"
semver = "1.0.24"
serde_yaml = "0.9.34"
tar = "0.4.43"
tempfile = "3.15.0"
zip = "2.2.2"
